--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "notes-api",
     "version": "1.0.0",
     "description": "Notes API with authentication",
-    "main": "server.js",
+    "main": "app.js",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js"
+        "start": "node app.js",
+        "dev": "nodemon app.js"
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.50.0",
