--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-URL=postgresql://db_yp7q_user:0lFmP452BIjVoy6ajhT4uPgnj5ee0OQi@dpg-d15cqnjuibrs73brcqkg-a.oregon-postgres.render.com/db_yp7q
+URL=
 
 
 PORT=5555
